changes with SECRET_KEY

--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -10,7 +10,7 @@
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarScroll">
-            <span class="navbar-text ms-auto me-1">{{request.user.username | capfirst }}</span>
+            <span class="navbar-text ms-auto me-1">{{request.user.username}}</span>
             <ul class="navbar-nav navbar-nav-scroll mt-1" style="--bs-scroll-height:100px;">
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle p-1" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
