--- a/base/templates/base/home.html
+++ b/base/templates/base/home.html
@@ -4,7 +4,7 @@
 
 {% block content %}
 <h1 class="my-4" style="height: 100%; text-align: center;">Herzlich Willkommen auf meiner Website!</h1>
-<!-- <div id="carouselExampleIndicators" class="carousel slide" style="height: 100vh;">
+<div id="carouselExampleIndicators" class="carousel slide" style="height: 100vh;">
     <div class="carousel-indicators">
         <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"
             aria-current="true" aria-label="Slide 1"></button>
@@ -34,5 +34,5 @@
         <span class="carousel-control-next-icon" aria-hidden="true"></span>
         <span class="visually-hidden">Next</span>
     </button>
-</div> -->
+</div>
 {% endblock content %}
