--- a/base/templates/base/home.html
+++ b/base/templates/base/home.html
@@ -3,7 +3,6 @@
 {% load static %}
 
 {% block content %}
-<h1 class="my-4" style="height: 100%; text-align: center;">Herzlich Willkommen auf meiner Website!</h1>
 <div id="carouselExampleIndicators" class="carousel slide" style="height: 100vh;">
     <div class="carousel-indicators">
         <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"
@@ -35,4 +34,5 @@
         <span class="visually-hidden">Next</span>
     </button>
 </div>
+<h1 class="my-4" style="height: 100vh; text-align: center;">Herzlich Willkommen auf meiner Website!</h1>
 {% endblock content %}
