--- a/base/templates/base/home.html
+++ b/base/templates/base/home.html
@@ -3,6 +3,22 @@
 {% load static %}
 
 {% block content %}
+<div class="container">
+    <div class="row py-4">
+        <div class="col">
+            <div class="card">
+                <div class="card-header">
+                    Featured
+                </div>
+                <div class="card-body">
+                    <h5 class="card-title">Special title treatment</h5>
+                    <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+                    <a href="#" class="btn btn-primary">Go somewhere</a>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
 <div id="carouselExampleIndicators" class="carousel slide" style="height: 100vh;">
     <div class="carousel-indicators">
         <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"
@@ -14,13 +30,16 @@
     </div>
     <div class="carousel-inner" style="height: 100%">
         <div class="carousel-item active" style="height: 100%;">
-            <img src="{% static 'images/img_01.png' %}" class="d-block w-100" style="object-fit: cover; object-position: center; height: 100%;" alt="...">
+            <img src="{% static 'images/img_01.png' %}" class="d-block w-100"
+                style="object-fit: cover; object-position: center; height: 100%;" alt="...">
         </div>
         <div class="carousel-item" style="height: 100%;">
-            <img src="{% static 'images/img_02.png' %}" class="d-block w-100 c-img" style="object-fit: cover; object-position: center; height: 100%;" alt="...">
+            <img src="{% static 'images/img_02.png' %}" class="d-block w-100 c-img"
+                style="object-fit: cover; object-position: center; height: 100%;" alt="...">
         </div>
         <div class="carousel-item" style="height: 100%">
-            <img src="{% static 'images/img_03.png' %}" class="d-block w-100 c-img" style="object-fit: cover; object-position: center; height: 100%;" alt="...">
+            <img src="{% static 'images/img_03.png' %}" class="d-block w-100 c-img"
+                style="object-fit: cover; object-position: center; height: 100%;" alt="...">
         </div>
     </div>
     <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
