changed image class

--- a/base/templates/base/user_profile.html
+++ b/base/templates/base/user_profile.html
@@ -3,5 +3,5 @@
 {% load static %}
 
 {% block content %}
-<img src="{% static 'images/smuel.gif' %}" class="mx-auto" style="height: 100%;">
+<img src="{% static 'images/smuel.gif' %}" class="img-fluid">
 {% endblock content %}
