--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -1,8 +1,10 @@
 {% load static %}
-
+<div class="container-fluid bg-primary d-flex justify-content-center">
+    <p class="mb-0 p-1 fs-6">Kontakt +49 176 36328712</p>
+</div>
 <nav class="navbar navbar-expand-sm bg-body-tertiary">
     <div class="container-fluid">
-        <a class="navbar-brand mb-0 h1" href="#">Max Falk</a>
+        <a class="navbar-brand mb-0 h1" href="{% url 'home' %}">Max Falk</a>
         {% if user.is_authenticated %}
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
             data-bs-target="#navbarScroll" aria-controls="navbarScroll" aria-expanded="false"
@@ -11,9 +13,9 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarScroll">
             <span class="navbar-text ms-auto me-1">{{request.user.username}}</span>
-            <ul class="navbar-nav navbar-nav-scroll mt-1" style="--bs-scroll-height:100px;">
+            <ul class="navbar-nav mt-1" style="--bs-scroll-height:100px;">
                 <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle p-1" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                    <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                         <svg class="mx-auto mb-2" xmlns="http://www.w3.org/2000/svg" width="30" height="30"
                             fill="currentColor" class="bi bi-person-circle" viewBox="0 0 16 16">
                             <path d="M11 6a3 3 0 1 1-6 0 3 3 0 0 1 6 0z" />
