--- a/templates/auth_card_center.html
+++ b/templates/auth_card_center.html
@@ -21,7 +21,7 @@
             <div class="row row-cols-1 flex-fill justify-content-center">
 
                 <div class="col-10 col-sm-10 col-md-8 col-lg-6 col-xl-5 col-xxl-4 align-self-center">
-                    <div class="card shadow-2-strong bg-body-secondary" style="border-radius: 1rem;">
+                    <div class="card shadow-2-strong bg-body-secondary glow-card" style="border-radius: 1rem;">
                         <div class="card-body p-lg-4 p-4 text-center">
                             {% block auth_card_content %}
                             {% endblock auth_card_content %}
