--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -2,20 +2,20 @@
 <div class="container-fluid bg-primary d-flex justify-content-center">
     <p class="mb-0 p-1 fs-6">Kontakt +49 176 36328712</p>
 </div>
-<nav class="navbar navbar-expand-sm bg-body-tertiary">
+<nav class="navbar navbar-expand-sm bg-body-tertiary" style="z-index: 1;">
     <div class="container-fluid">
-        <a class="navbar-brand mb-0 h1" href="{% url 'home' %}">Max Falk</a>
+        <a class="navbar-brand mb-0 h1" href="{% url 'home' %}">Home</a>
         {% if user.is_authenticated %}
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-            data-bs-target="#navbarScroll" aria-controls="navbarScroll" aria-expanded="false"
-            aria-label="Toggle navigation">
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarScroll"
+            aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarScroll">
             <span class="navbar-text ms-auto me-1">{{request.user.username}}</span>
-            <ul class="navbar-nav mt-1" style="--bs-scroll-height:100px;">
+            <ul class="navbar-nav mt-1" style="--bs-scroll-height: 100px">
                 <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                    <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+                        aria-expanded="false">
                         <svg class="mx-auto mb-2" xmlns="http://www.w3.org/2000/svg" width="30" height="30"
                             fill="currentColor" class="bi bi-person-circle" viewBox="0 0 16 16">
                             <path d="M11 6a3 3 0 1 1-6 0 3 3 0 0 1 6 0z" />
@@ -24,16 +24,26 @@
                         </svg>
                     </a>
                     <ul class="dropdown-menu dropdown-menu-end">
-                        <li><a class="dropdown-item" href="{% url 'profile-user' %}">Show Profile</a></li>
-                        <li><a class="dropdown-item text-danger justify-content-center align-items-center" href="{% url 'logout-user' %}">Logout
-                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-box-arrow-right" viewBox="0 0 16 16">
-                            <path fill-rule="evenodd" d="M10 12.5a.5.5 0 0 1-.5.5h-8a.5.5 0 0 1-.5-.5v-9a.5.5 0 0 1 .5-.5h8a.5.5 0 0 1 .5.5v2a.5.5 0 0 0 1 0v-2A1.5 1.5 0 0 0 9.5 2h-8A1.5 1.5 0 0 0 0 3.5v9A1.5 1.5 0 0 0 1.5 14h8a1.5 1.5 0 0 0 1.5-1.5v-2a.5.5 0 0 0-1 0v2z"/>
-                            <path fill-rule="evenodd" d="M15.854 8.354a.5.5 0 0 0 0-.708l-3-3a.5.5 0 0 0-.708.708L14.293 7.5H5.5a.5.5 0 0 0 0 1h8.793l-2.147 2.146a.5.5 0 0 0 .708.708l3-3z"/>
-                          </svg></a></li>
+                        <li>
+                            <a class="dropdown-item" href="{% url 'profile-user' %}">Show Profile</a>
+                        </li>
+                        <li>
+                            <a class="dropdown-item text-danger justify-content-center align-items-center"
+                                href="{% url 'logout-user' %}">Logout
+                                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                                    class="bi bi-box-arrow-right" viewBox="0 0 16 16">
+                                    <path fill-rule="evenodd"
+                                        d="M10 12.5a.5.5 0 0 1-.5.5h-8a.5.5 0 0 1-.5-.5v-9a.5.5 0 0 1 .5-.5h8a.5.5 0 0 1 .5.5v2a.5.5 0 0 0 1 0v-2A1.5 1.5 0 0 0 9.5 2h-8A1.5 1.5 0 0 0 0 3.5v9A1.5 1.5 0 0 0 1.5 14h8a1.5 1.5 0 0 0 1.5-1.5v-2a.5.5 0 0 0-1 0v2z" />
+                                    <path fill-rule="evenodd"
+                                        d="M15.854 8.354a.5.5 0 0 0 0-.708l-3-3a.5.5 0 0 0-.708.708L14.293 7.5H5.5a.5.5 0 0 0 0 1h8.793l-2.147 2.146a.5.5 0 0 0 .708.708l3-3z" />
+                                </svg></a>
+                        </li>
                     </ul>
                 </li>
             </ul>
         </div>
+        {% else %}
+        <a class="nav-link active ms-auto me-1" href="{% url 'login-user' %}">Login</a>
         {% endif %}
     </div>
 </nav>
