--- a/templates/main.html
+++ b/templates/main.html
@@ -19,6 +19,7 @@
 
 <body data-bs-theme="dark">
     <div class="container-fluid min-100 d-flex flex-column p-0">
+        <!-- style="background-color: #001220;" -->
         {% include 'navbar.html'%}
 
         {% block content %}
