--- a/base/static/styles/style.css
+++ b/base/static/styles/style.css
@@ -1,5 +1,7 @@
-html, body {
+html,
+body {
     height: 100%;
+    /* background-color: #001220; */
 }
 
 .min-100 {
@@ -15,12 +17,6 @@ html, body {
     vertical-align: -.125em;
     fill: currentColor;
 }
-
-
-
-
-
-
 
 .custom-shape-divider-top-1698420714 {
     position: absolute;
@@ -44,7 +40,80 @@ html, body {
 
 
 .glow-card {
-    -webkit-box-shadow:0px 0px 105px 45px rgba(46,130,255,0.9);
-    -moz-box-shadow: 0px 0px 105px 45px rgba(46,130,255,0.9);
-    box-shadow: 0px 0px 105px 45px rgba(46,130,255,0.9);
+    -webkit-box-shadow: 0px 0px 70px 4px rgba(46, 130, 255, 0.4);
+    -moz-box-shadow: 0px 0px 70px 4px rgba(46, 130, 255, 0.4);
+    box-shadow: 0px 0px 70px 4px rgba(46, 130, 255, 0.4);
+}
+
+.mybox {
+    position: relative;
+    height: fit-content;
+}
+
+/* setting padding based on even or odd */
+.mybox:nth-child(odd) {
+    padding: 30px 0 30px 30px;
+}
+
+.mybox:nth-child(even) {
+    padding: 30px 30px 30px 0;
+}
+
+/* Global ::before */
+.mybox::before {
+    content: "";
+    position: absolute;
+    width: 50%;
+    border: solid #fa7268;
+    /* border: solid #fe019a; */
+    /* border: solid #0d6efd; */
+}
+
+/* Setting the border of top, bottom, left */
+.mybox:nth-child(odd)::before {
+    left: 0px;
+    top: -5px;
+    bottom: -5px;
+    border-width: 5px 0 5px 5px;
+    border-radius: 50px 0 0 50px;
+}
+
+/* Setting the border of top, bottom, right */
+.mybox:nth-child(even)::before {
+    right: 0;
+    top: 0;
+    bottom: 0;
+    border-width: 5px 5px 5px 0;
+    border-radius: 0 50px 50px 0;
+}
+
+
+/* Removing the border if it is the first card */
+.mybox:first-child::before {
+    border-top: 0;
+    border-top-left-radius: 0;
+}
+
+/* Removing the border if it is the last card  and it's odd */
+.mybox:last-child:nth-child(odd)::before {
+    border-bottom: 0;
+    border-bottom-left-radius: 0;
+}
+
+/* Removing the border if it is the last card  and it's even */
+.mybox:last-child:nth-child(even)::before {
+    border-bottom: 0;
+    border-bottom-right-radius: 0;
+}
+
+.mybox:nth-child(even)>h1 {
+    text-align: right;
+}
+
+.mybox:nth-child(even)>h2 {
+    text-align: right;
+}
+
+.mybox:nth-child(even) > p {
+    text-align: right;
 }
