new app and minor wording changes

--- a/base/templates/base/home.html
+++ b/base/templates/base/home.html
@@ -127,7 +127,7 @@
         <ul class="px-3 pt-3 fs-5">
             <li>Fähigkeit, in einer sehr aktiven Umgebung für ein außergewöhnliches Kundenerlebnis zu sorgen, sowie Freude am Umgang mit Menschen.</li>
             <li>Starkes Interesse an Technologie, insbesondere an Apple Produkten, und schnelle Auffassungsgabe beim Kennenlernen neuer Produkte und Features.</li>
-            <li>Starke Kommunikationsfähigkeiten, Selbstsicherheit beim freien Sprechen vor kleinen Gruppen sowie vor Einzelpersonen.</li>
+            <li>Starke Fähigkeiten in der Kommunikation, Selbstsicherheit beim freien Sprechen vor kleinen Gruppen sowie vor Einzelpersonen.</li>
         </ul>
         <p class="pt-3">Nov. 2021 - Aug. 2023</p>
         <!-- <h1 class="fs-3">Apple Inc.</h1> -->
@@ -136,7 +136,7 @@
     <div class="mybox px-5">
         <h1 class="fs-3">Höfinger und Maller</h1>
         <h2 class="fs-4">Produktionshelfer</h2>
-        <p class="pt-3 fs-5">Produktionsunterstützung in der Füllerei und Aushilfe bei der Auslieferung an Kunden im Rahmen eines Ferialpraktikums</p>
+        <p class="pt-3 fs-5">Unterstützung der Produktion in der Füllerei und Aushilfe bei der Auslieferung an Kunden im Rahmen eines Ferialpraktikums</p>
         <p class="fs-6 pt-3">Jun 2018 - Sep 2018</p>
     </div>
     <div class="mybox px-5">
