--- a/base/templates/base/home.html
+++ b/base/templates/base/home.html
@@ -121,7 +121,7 @@
         </div>
     </section>
 
-    <div class="mybox px-5">
+    <div class="mybox">
         <h1 class="fs-3">Apple Inc.</h1>
         <h2 class="fs-4">Specialist</h2>
         <ul class="px-3 pt-3 fs-5">
@@ -133,13 +133,13 @@
         <!-- <h1 class="fs-3">Apple Inc.</h1> -->
         <!-- <h2 class="fs-4">Sales Specialist</h2> -->
     </div>
-    <div class="mybox px-5">
+    <div class="mybox">
         <h1 class="fs-3">Höfinger und Maller</h1>
         <h2 class="fs-4">Produktionshelfer</h2>
         <p class="pt-3 fs-5">Unterstützung der Produktion in der Füllerei und Aushilfe bei der Auslieferung an Kunden im Rahmen eines Ferialpraktikums</p>
         <p class="fs-6 pt-3">Jun 2018 - Sep 2018</p>
     </div>
-    <div class="mybox px-5">
+    <div class="mybox">
         <h1 class="fs-3">WiewerK</h1>
         <h2 class="fs-4">Aushilfe</h2>
         <p class="pt-3 fs-5">Unterstützung bei Planung, Auf- und Abbau und technischer Betreuung von Veranstaltungen.</p>
