--- a/base/templates/base/home.html
+++ b/base/templates/base/home.html
@@ -124,11 +124,9 @@
     <div class="mybox">
         <h1 class="fs-3">Apple Inc.</h1>
         <h2 class="fs-4">Specialist</h2>
-        <ul class="px-3 pt-3 fs-5">
-            <li>Fähigkeit, in einer sehr aktiven Umgebung für ein außergewöhnliches Kundenerlebnis zu sorgen, sowie Freude am Umgang mit Menschen.</li>
-            <li>Starkes Interesse an Technologie, insbesondere an Apple Produkten, und schnelle Auffassungsgabe beim Kennenlernen neuer Produkte und Features.</li>
-            <li>Starke Fähigkeiten in der Kommunikation, Selbstsicherheit beim freien Sprechen vor kleinen Gruppen sowie vor Einzelpersonen.</li>
-        </ul>
+        <p class="fs-5 pt-3">Fähigkeit, in einer sehr aktiven Umgebung für ein außergewöhnliches Kundenerlebnis zu sorgen, sowie Freude am Umgang mit Menschen.</p>
+        <p class="fs-5">Starkes Interesse an Technologie, insbesondere an Apple Produkten, und schnelle Auffassungsgabe beim Kennenlernen neuer Produkte und Features.</p>
+        <p class="fs-5">Starke Fähigkeiten in der Kommunikation, Selbstsicherheit beim freien Sprechen vor kleinen Gruppen sowie vor Einzelpersonen.</p>
         <p class="pt-3">Nov. 2021 - Aug. 2023</p>
         <!-- <h1 class="fs-3">Apple Inc.</h1> -->
         <!-- <h2 class="fs-4">Sales Specialist</h2> -->
