row col for cv to make view better on mobile

--- a/base/templates/base/home.html
+++ b/base/templates/base/home.html
@@ -97,53 +97,63 @@
     </div>
 </section>
 
-<section class="container w-75 justify-content-center">
-    <h1 class="fs-1 text-center">Über mich</h1>
+<section class="container-fluid">
+    <div class="row justify-content-center">
+        <div class="col-md-9 col-11">
 
-    <section class="mx-auto mybox">
-        <div class="card mx-auto" style="max-width: 540px">
-            <div class="row g-0">
-                <div class="col-md-4">
-                    <img src="{% static 'images/max.jpeg' %}" class="img-fluid rounded-start" alt="..." />
-                </div>
-                <div class="col-md-8">
-                    <div class="card-body">
-                        <h5 class="card-title">Maximilian Falk</h5>
-                        <p class="card-text">
-                            Krassester Typ on planet earth.
-                        </p>
-                        <p class="card-text">
-                            <small class="text-body-secondary">Slay</small>
-                        </p>
+            <h1 class="fs-1 text-center">Über mich</h1>
+
+            <section class="mx-auto mybox">
+                <div class="card mx-auto" style="max-width: 540px">
+                    <div class="row g-0">
+                        <div class="col-md-4">
+                            <img src="{% static 'images/max.jpeg' %}" class="img-fluid rounded-start" alt="..." />
+                        </div>
+                        <div class="col-md-8">
+                            <div class="card-body">
+                                <h5 class="card-title">Maximilian Falk</h5>
+                                <p class="card-text">
+                                    Krassester Typ on planet earth.
+                                </p>
+                                <p class="card-text">
+                                    <small class="text-body-secondary">Slay</small>
+                                </p>
+                            </div>
+                        </div>
                     </div>
                 </div>
+            </section>
+
+            <div class="mybox">
+                <h1 class="fs-3">Apple Inc.</h1>
+                <h2 class="fs-4">Specialist</h2>
+                <p class="fs-5 pt-3">Fähigkeit, in einer sehr aktiven Umgebung für ein außergewöhnliches Kundenerlebnis
+                    zu sorgen, sowie Freude am Umgang mit Menschen.</p>
+                <p class="fs-5">Starkes Interesse an Technologie, insbesondere an Apple Produkten, und schnelle
+                    Auffassungsgabe beim Kennenlernen neuer Produkte und Features.</p>
+                <p class="fs-5">Starke Fähigkeiten in der Kommunikation, Selbstsicherheit beim freien Sprechen vor
+                    kleinen Gruppen sowie vor Einzelpersonen.</p>
+                <p class="pt-3">Nov. 2021 - Aug. 2023</p>
+                <!-- <h1 class="fs-3">Apple Inc.</h1> -->
+                <!-- <h2 class="fs-4">Sales Specialist</h2> -->
+            </div>
+            <div class="mybox">
+                <h1 class="fs-3">Höfinger und Maller</h1>
+                <h2 class="fs-4">Produktionshelfer</h2>
+                <p class="pt-3 fs-5">Unterstützung der Produktion in der Füllerei und Aushilfe bei der Auslieferung an
+                    Kunden im Rahmen eines Ferialpraktikums</p>
+                <p class="fs-6 pt-3">Jun 2018 - Sep 2018</p>
+            </div>
+            <div class="mybox">
+                <h1 class="fs-3">WiewerK</h1>
+                <h2 class="fs-4">Aushilfe</h2>
+                <p class="pt-3 fs-5">Unterstützung bei Planung, Auf- und Abbau und technischer Betreuung von
+                    Veranstaltungen.</p>
+                <p class="fs-5">Licht-, Ton – und medientechnische Unterstützung</p>
+                <p class="fs-6 pt-3">Aug. 2016 - Jun. 2018</p>
+
             </div>
         </div>
-    </section>
-
-    <div class="mybox">
-        <h1 class="fs-3">Apple Inc.</h1>
-        <h2 class="fs-4">Specialist</h2>
-        <p class="fs-5 pt-3">Fähigkeit, in einer sehr aktiven Umgebung für ein außergewöhnliches Kundenerlebnis zu sorgen, sowie Freude am Umgang mit Menschen.</p>
-        <p class="fs-5">Starkes Interesse an Technologie, insbesondere an Apple Produkten, und schnelle Auffassungsgabe beim Kennenlernen neuer Produkte und Features.</p>
-        <p class="fs-5">Starke Fähigkeiten in der Kommunikation, Selbstsicherheit beim freien Sprechen vor kleinen Gruppen sowie vor Einzelpersonen.</p>
-        <p class="pt-3">Nov. 2021 - Aug. 2023</p>
-        <!-- <h1 class="fs-3">Apple Inc.</h1> -->
-        <!-- <h2 class="fs-4">Sales Specialist</h2> -->
-    </div>
-    <div class="mybox">
-        <h1 class="fs-3">Höfinger und Maller</h1>
-        <h2 class="fs-4">Produktionshelfer</h2>
-        <p class="pt-3 fs-5">Unterstützung der Produktion in der Füllerei und Aushilfe bei der Auslieferung an Kunden im Rahmen eines Ferialpraktikums</p>
-        <p class="fs-6 pt-3">Jun 2018 - Sep 2018</p>
-    </div>
-    <div class="mybox">
-        <h1 class="fs-3">WiewerK</h1>
-        <h2 class="fs-4">Aushilfe</h2>
-        <p class="pt-3 fs-5">Unterstützung bei Planung, Auf- und Abbau und technischer Betreuung von Veranstaltungen.</p>
-        <p class="fs-5">Licht-, Ton – und medientechnische Unterstützung</p>
-        <p class="fs-6 pt-3">Aug. 2016 - Jun. 2018</p>
-
     </div>
 </section>
 
