--- a/base/templates/base/home.html
+++ b/base/templates/base/home.html
@@ -103,7 +103,7 @@
 
             <h1 class="fs-1 text-center">Über mich</h1>
 
-            <section class="mx-auto mybox">
+            <section class="mx-auto pseudo-line">
                 <div class="card mx-auto" style="max-width: 540px">
                     <div class="row g-0">
                         <div class="col-md-4">
@@ -123,6 +123,7 @@
                     </div>
                 </div>
             </section>
+            <div>
 
             <div class="mybox">
                 <h1 class="fs-3">Apple Inc.</h1>
@@ -152,6 +153,7 @@
                 <p class="fs-5">Licht-, Ton – und medientechnische Unterstützung</p>
                 <p class="fs-6 pt-3">Aug. 2016 - Jun. 2018</p>
 
+            </div>
             </div>
         </div>
     </div>
