--- a/templates/auth_card_center.html
+++ b/templates/auth_card_center.html
@@ -1,9 +1,8 @@
 {% extends 'main.html' %}
 
 {% block content %}
-<div class="row flex-fill g-0">
-    <main class="col p-0">
-        <div class="container min-100 text-center d-flex">
+<div class="justify-content-center align-items-center d-flex flex-grow-1 h-100">
+        <div class="container text-center my-auto">
 
             {% comment %} {% if messages %}
             <div class="row justify-content-center">
@@ -18,10 +17,10 @@
             </div>
             {% endif %} {% endcomment %}
 
-            <div class="row row-cols-1 flex-fill justify-content-center">
+            <div class="row justify-content-center">
 
                 <div class="col-10 col-sm-10 col-md-8 col-lg-6 col-xl-5 col-xxl-4 align-self-center">
-                    <div class="card shadow-2-strong bg-body-secondary glow-card" style="border-radius: 1rem;">
+                    <div class="card shadow-2-strong bg-body-secondary glow-card my-auto" style="border-radius: 1rem;">
                         <div class="card-body p-lg-4 p-4 text-center">
                             {% block auth_card_content %}
                             {% endblock auth_card_content %}
@@ -30,6 +29,5 @@
                 </div>
             </div>
         </div>
-    </main>
 </div>
 {% endblock content %}
