changed image and description text on cv

--- a/base/templates/base/home.html
+++ b/base/templates/base/home.html
@@ -101,22 +101,18 @@
     <div class="row justify-content-center">
         <div class="col-md-9 col-11">
 
-            <h1 class="fs-1 text-center">Über mich</h1>
 
-            <section class="mx-auto pseudo-line">
-                <div class="card mx-auto" style="max-width: 540px">
-                    <div class="row g-0">
+            <section class="mx-auto pseudo-line pt-3">
+                <div class="card mx-auto" style="max-width: 766px;">
+                    <div class="row g-0" >
                         <div class="col-md-4">
-                            <img src="{% static 'images/max.jpeg' %}" class="img-fluid rounded-start" alt="..." />
+                            <img src="{% static 'images/max_02.JPEG' %}" class="img-fluid rounded-start" alt="..." />
                         </div>
                         <div class="col-md-8">
                             <div class="card-body">
-                                <h5 class="card-title">Maximilian Falk</h5>
-                                <p class="card-text">
-                                    Krassester Typ on planet earth.
-                                </p>
-                                <p class="card-text">
-                                    <small class="text-body-secondary">Slay</small>
+                                <h5 class="card-title fs-1">Maximilian Falk</h5>
+                                <p class="card-text fs-5 pt-2">
+                                    Hey! Ich bin Max und habe meinen Bachelor in Informatik & Computational Science an der Universität Potsdam gemacht. Zur Zeit lebe ich mit meiner Frau in Berlin und arbeite an ein paar Projekten (unter Anderem diese Website). Zu meinen Hobbies gehört es Videospiele zu spielen, Gärtnern und mit Technik herum zu tüfteln. 
                                 </p>
                             </div>
                         </div>
