--- a/base/templates/base/user_profile.html
+++ b/base/templates/base/user_profile.html
@@ -3,5 +3,6 @@
 {% load static %}
 
 {% block content %}
-<img src="{% static 'images/smuel.gif' %}" class="img-fluid">
+<h1 class="text-center">Coming soon...</h1>
+<!-- <img src="{% static 'images/smuel.gif' %}" class="img-fluid"> -->
 {% endblock content %}
