--- a/templates/auth_card_center.html
+++ b/templates/auth_card_center.html
@@ -1,7 +1,7 @@
 {% extends 'main.html' %}
 
 {% block content %}
-<div class="justify-content-center align-items-center d-flex flex-grow-1 h-100">
+<div class="justify-content-center align-items-center d-flex flex-grow-1">
         <div class="container text-center my-auto">
             <div class="row justify-content-center">
                 <div class="col-10 col-sm-10 col-md-8 col-lg-6 col-xl-5 col-xxl-4 align-self-center">
