--- a/templates/auth_card_center.html
+++ b/templates/auth_card_center.html
@@ -1,18 +1,18 @@
 {% extends 'main.html' %}
 
 {% block content %}
-<div class="justify-content-center align-items-center d-flex flex-grow-1 h-100">
-        <div class="container text-center">
-            <div class="row justify-content-center">
-                <div class="col-10 col-sm-10 col-md-8 col-lg-6 col-xl-5 col-xxl-4 align-self-center">
-                    <div class="card shadow-2-strong bg-body-secondary glow-card my-auto" style="border-radius: 1rem;">
-                        <div class="card-body p-lg-4 p-4 text-center">
-                            {% block auth_card_content %}
-                            {% endblock auth_card_content %}
-                        </div>
+<div class="align-items-center d-flex flex-grow-1">
+    <div class="container">
+        <div class="row justify-content-center">
+            <div class="col-10 col-sm-10 col-md-8 col-lg-6 col-xl-5 col-xxl-4">
+                <div class="card shadow-2-strong bg-body-secondary glow-card my-auto" style="border-radius: 1rem;">
+                    <div class="card-body p-lg-4 p-4 text-center">
+                        {% block auth_card_content %}
+                        {% endblock auth_card_content %}
                     </div>
                 </div>
             </div>
         </div>
+    </div>
 </div>
 {% endblock content %}
